fix: correct picker popover spacing t-shirt sizes

--- a/components/picker/index.css
+++ b/components/picker/index.css
@@ -13,15 +13,6 @@ governing permissions and limitations under the License.
 @import "../commons/basebutton-coretokens.css";
 
 .spectrum-Picker {
-  /* Placeholder tokens */
-  .spectrum--medium {
-    /* --spectrum-picker-popover-quiet-offset-x: 12px; */
-  }
-
-  .spectrum--large {
-    /* --spectrum-picker-popover-quiet-offset-x: 15px; */
-  }
-
   /* font */
   --spectrum-picker-font-size: var(--spectrum-font-size-100);
 
@@ -42,7 +33,10 @@ governing permissions and limitations under the License.
   --spectrum-picker-spacing-icon-to-disclosure-icon: var(--spectrum-picker-visual-to-disclosure-icon-medium);
   --spectrum-picker-spacing-label-to-picker: var(--spectrum-field-label-to-component);
   --spectrum-picker-spacing-label-to-picker-quiet: var(--spectrum-field-label-to-component-quiet-medium);
-  --spectrum-picker-spacing-picker-to-popover: var(--spectrum-component-to-menu-medium);
+
+  & + .spectrum-Popover--bottom.is-open {
+    --spectrum-picker-spacing-picker-to-popover: var(--spectrum-component-to-menu-medium);
+  }
 
   /* animation */
   --spectrum-picker-animation-duration: var(--spectrum-animation-duration-100);
@@ -84,7 +78,11 @@ governing permissions and limitations under the License.
   --spectrum-picker-spacing-text-to-alert-icon-inline-start: var(--spectrum-field-text-to-alert-icon-small);
   --spectrum-picker-spacing-icon-to-disclosure-icon: var(--spectrum-picker-visual-to-disclosure-icon-small);
   --spectrum-picker-spacing-label-to-picker-quiet: var(--spectrum-field-label-to-component-quiet-small);
-  --spectrum-picker-spacing-picker-to-popover: var(--spectrum-component-to-menu-small);
+
+
+  & + .spectrum-Popover--bottom.is-open {
+    --spectrum-picker-spacing-picker-to-popover: var(--spectrum-component-to-menu-small);
+  }
 }
 
 .spectrum-Picker--sizeM {
@@ -94,7 +92,10 @@ governing permissions and limitations under the License.
   --spectrum-picker-spacing-text-to-alert-icon-inline-start: var(--spectrum-field-text-to-alert-icon-medium);
   --spectrum-picker-spacing-icon-to-disclosure-icon: var(--spectrum-picker-visual-to-disclosure-icon-medium);
   --spectrum-picker-spacing-label-to-picker-quiet: var(--spectrum-field-label-to-component-quiet-medium);
-  --spectrum-picker-spacing-picker-to-popover: var(--spectrum-component-to-menu-medium);
+
+  & + .spectrum-Popover--bottom.is-open {
+    --spectrum-picker-spacing-picker-to-popover: var(--spectrum-component-to-menu-medium);
+  }
 }
 
 .spectrum-Picker--sizeL {
@@ -104,7 +105,10 @@ governing permissions and limitations under the License.
   --spectrum-picker-spacing-text-to-alert-icon-inline-start: var(--spectrum-field-text-to-alert-icon-large);
   --spectrum-picker-spacing-icon-to-disclosure-icon: var(--spectrum-picker-visual-to-disclosure-icon-large);
   --spectrum-picker-spacing-label-to-picker-quiet: var(--spectrum-field-label-to-component-quiet-large);
-  --spectrum-picker-spacing-picker-to-popover: var(--spectrum-component-to-menu-large);
+
+  & + .spectrum-Popover--bottom.is-open {
+    --spectrum-picker-spacing-picker-to-popover: var(--spectrum-component-to-menu-large);
+  }
 }
 
 .spectrum-Picker--sizeXL {
@@ -114,7 +118,10 @@ governing permissions and limitations under the License.
   --spectrum-picker-spacing-text-to-alert-icon-inline-start: var(--spectrum-field-text-to-alert-icon-extra-large);
   --spectrum-picker-spacing-icon-to-disclosure-icon: var(--spectrum-picker-visual-to-disclosure-icon-extra-large);
   --spectrum-picker-spacing-label-to-picker-quiet: var(--spectrum-field-label-to-component-quiet-extra-large);
-  --spectrum-picker-spacing-picker-to-popover: var(--spectrum-component-to-menu-extra-large);
+
+  & + .spectrum-Popover--bottom.is-open {
+    --spectrum-picker-spacing-picker-to-popover: var(--spectrum-component-to-menu-extra-large);
+  }
 }
 
 /* Windows high contrast mode */
@@ -391,7 +398,6 @@ governing permissions and limitations under the License.
 
 .spectrum-Picker + .spectrum-Popover--bottom.is-open {
   transform: translateY(var(--mod-picker-spacing-picker-to-popover, var(--spectrum-picker-spacing-picker-to-popover)));
-  transform: translateY(var(--mod-component-to-menu-medium, var(--spectrum-component-to-menu-medium)));
 }
 
 .spectrum-Picker--quiet {
